--- a/vignettes/articles/InputFiles.Rmd
+++ b/vignettes/articles/InputFiles.Rmd
@@ -6,7 +6,7 @@ title: Hector input files
 
 When Hector is invoked from the command line, it takes a single parameter: the name of the primary input file to read. This file, typically stored in the `input/` directory, contains configuration and parameter data controlling the model's run, output, and behavior.
 
-The primary input file is a text file with *sections*, *properties*, and *values*. For example, the beginning of the [SSP245 file]() included in the repository looks like this:
+The primary input file is a text file with *sections*, *properties*, and *values*. For example, the beginning of the [SSP245 file](/inst/input/hector_ssp245.ini) included in the repository looks like this:
 
 ```
 ; Config file for hector model: SSP245
