--- a/vignettes/articles/ocean-carbon-cycle.Rmd
+++ b/vignettes/articles/ocean-carbon-cycle.Rmd
@@ -11,7 +11,7 @@ of the Marine Biota at High Latitude, J. Geophys. Res., 89,
 4629–4637, doi:10.1029/JD089iD03p04629, 1984.], and Sarmiento
 and Toggweiler (1984)^[Sarmiento, J. L. and Toggweiler, J. R.: A new model for the role
 of the oceans in determining atmospheric PCO2, Nature, 308,
-621–624, 1984] Hector's implementation of the ocean carbon cycle was documented in Hartin et al. (2016)^[Hartin, C. A., Bond-Lamberty, B., Patel, P., and Mundra, A.: Ocean acidification over the next three centuries using a simple global climate carbon-cycle model: projections and sensitivities, Biogeosciences, 13, 4329–4342, https://doi.org/10.5194/bg-13-4329-2016, 2016.]. Hector's ocean is a four box model, with two surface level boxes (high latitude and low latitude), an intermediate, and deep ocean boxes. Within the surface boxes Hector solves for pCO2, pH, [HCO${_3}^{-1}$ ], [CO$_{3}^{-2}$], aragonite $\Omega_{Ar}$ and calcite $\Omega_{Ca}$. The chemistry of carbon in the surface boxes depends on salinity, DIC, and temperature. 
+621–624, 1984], Hector's implementation of the ocean carbon cycle was documented in Hartin et al. (2016).^[Hartin, C. A., Bond-Lamberty, B., Patel, P., and Mundra, A.: Ocean acidification over the next three centuries using a simple global climate carbon-cycle model: projections and sensitivities, Biogeosciences, 13, 4329–4342, https://doi.org/10.5194/bg-13-4329-2016, 2016.] Hector's ocean is a four box model with two surface level boxes (high latitude and low latitude), an intermediate, and deep ocean boxes. Within the surface boxes Hector solves for pCO~2~, pH, [HCO${_3}^{-1}$ ], [CO$_{3}^{-2}$], aragonite $\Omega_{Ar}$ and calcite $\Omega_{Ca}$. The chemistry of carbon in the surface boxes depends on salinity, dissolved inorganic carbon (DIC), and temperature. 
 
 
 ## Implementation 
