--- a/vignettes/articles/AddNewComponent.Rmd
+++ b/vignettes/articles/AddNewComponent.Rmd
@@ -3,7 +3,7 @@ title: "Add a new Hector component"
 subtitle: C++
 ---
 
-Here are the steps to create a new component `X` to Hector's C++ codebase. 
+Here are the steps to create a new component `X` in Hector's C++ codebase. 
 
 Step one:
 -----------
