--- a/vignettes/articles/hector_apply.Rmd
+++ b/vignettes/articles/hector_apply.Rmd
@@ -31,7 +31,7 @@ run(hcore, 1999)
 ```
 
 Our target function will take a vector of emission values as input and return a vector of 
-discrepancies between the hector outputs and the target output.  We'll make the target concentration
+discrepancies between the Hector outputs and the target output.  We'll make the target concentration
 value 1820 ppbv CH$_4$ (a bit higher than the year 2000 value in the baseline scenario).
 
 ```{r targfn.init}
