incorporate Steve's feedback

--- a/vignettes/articles/addnewforcer.Rmd
+++ b/vignettes/articles/addnewforcer.Rmd
@@ -31,7 +31,7 @@ Add the new forcer to Hector, this will require changes to the C++ code base.
 
 1. Create a new [Hector component](AddNewComponent.html) use an existing model component or the `dummy_model_component.hpp` and `dummy_model_component.cpp` files as a template.
 2. Within the new component add [new variables](AddNewVariable.html) as appropriate. Use this component to read in the emissions. If the forcer being added is a GHG then use the appropriate method to convent from emissions to concentrations and expose the concentrations (via getData) so that they may be passed to other Hector components, the new model component cpp file will return the new emissions or concentrations (whichever one is appropriate). 
-3. Next modify the `forcing_compoent.cpp`, add the equation that to convert the emissions or concentration time series to radiative forcing values. The new values should be added into the forcing map ("forcings" see where the N2O RF is set for an [example](https://github.com/JGCRI/hector/blob/a75702ba5a3ab9684a4eae1e49ef221172b6a494/src/forcing_component.cpp#L310)) so that these new values will be incorporated into the total radiative forcing calculation. 
+3. Next modify the `forcing_compoent.cpp`, add the equation that to convert the emissions or concentration time series to radiative forcing values. If the new emission is not a GHG but impacts an existing forcer (such as an emission that changes OH chemistry or aerosol concentrations), then modify the appropriate equations to take into account the new emission species. The new values should be added into the forcing map ("forcings" see where the N2O RF is set for an [example](https://github.com/JGCRI/hector/blob/a75702ba5a3ab9684a4eae1e49ef221172b6a494/src/forcing_component.cpp#L310)) so that these new values will be incorporated into the total radiative forcing calculation. 
 4. Lastly make sure to update the `rcpp_constatns.cpp` so that the new variables can be accessed via the R interface, see [new variables](AddNewVariable.html#R). 
 
 
